--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Minh Toan">
     <meta name="description" content="Personal portfolio made using Reactjs"/>
-    <meta property="og:title" content="manhthong's portfolio">
+    <meta property="og:title" content="minhtoan's portfolio">
     <meta property="og:type" content="Website">
-    <meta property="og:url" content="https://manhthong-sg.site/">
+    <meta property="og:url" content="http://minhtoan.click/">
     <meta property="og:image" name="image" content="https://rb.gy/i6buv">
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
